<?xml version="1.0"?>
<package format="3">
  <name>giskard_ros</name>
  <version>0.1.0</version>
  <description>
    Various ROS nodes that use the giskard library, a framework for
    constraint- and optimization-based robot motion control.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelow</author>

  <license>GPLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>yaml-cpp</depend>
  <depend>giskard_core</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>rcl_action</depend>
  <depend>rcl_yaml_param_parser</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>giskard_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kdl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
